@@ -128,6 +128,7 @@ Wolfpack 12.9.14 Beta (SVN)
   - Implemented some new npcs (thx to idget).
   - Implemented ballot box.
   - Added a gobaseid command.
+  - Implemented arcane gem.
  * Misc. Changes:
  * Known Issues, Bugs, and Missing Features:
   - Some skills are still incomplete.
